--- a/server/config/config.json
+++ b/server/config/config.json
@@ -2,7 +2,7 @@
   "development": {
     "username": "postgres",
     "password": "admin",
-    "database": "codihealth",
+    "database": "codihealth2",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
